--- a/openCVtest.ipynb
+++ b/openCVtest.ipynb
@@ -20,11 +20,11 @@
     "import  cv2\n",
     "\n",
     "\n",
-    "theImage=cv2.imread(\"face.jpg\")\n",
+    "theImage=cv2.imread(\"pic2.png\")\n",
     "\n",
     "theImageGray=cv2.cvtColor(theImage,cv2.COLOR_BGR2GRAY)\n",
     "\n",
-    "cv2.imwrite(\"result.jpg\",theImageGray)\n"
+    "cv2.imwrite(\"result2.jpg\",theImageGray)\n"
    ]
   }
  ],
