--- a/pointProcessing.ipynb
+++ b/pointProcessing.ipynb
@@ -104,7 +104,7 @@
    "source": [
     "#所有值除以2\n",
     "y = img/2\n",
-    "io.imshow(y,cmap='gray')\n"
+    "io.imshow(y,cmap='gray')"
    ],
    "metadata": {
     "collapsed": false,
@@ -139,8 +139,7 @@
    "source": [
     "y = img*2\n",
     "#對於大於255的 設成255\n",
-    "y[y<100]=150\n",
-    "\n",
+    "y[y>255]=255\n",
     "io.imshow(y)\n"
    ],
    "metadata": {
@@ -216,10 +215,8 @@
     "b = np.array([40,100, 220, 255])\n",
     "#定義一條線 (0~256),自動生成圖\n",
     "lin = np.interp(range(256), a, b)\n",
-    "\n",
     "#0~256的每個點\n",
     "x = range(256)\n",
-    "\n",
     "#秀出圖\n",
     "f = plt.figure()\n",
     "f.show(plt.plot(x,lin))"
