--- a/imageDisplay.ipynb
+++ b/imageDisplay.ipynb
@@ -40,7 +40,7 @@
     "\n",
     "\n",
     "\n",
-    "c = io.imread('result (Custom).jpg')\n",
+    "c = io.imread('davidFace(square).jpg')\n",
     "io.imshow(c)\n"
    ]
   },
