--- a/neighborhoodProcessing.ipynb
+++ b/neighborhoodProcessing.ipynb
@@ -144,7 +144,7 @@
    ],
    "source": [
     "#平均濾波器\n",
-    "img = io.imread('result (Custom).jpg')\n",
+    "img = io.imread('davidFace(square).jpg')\n",
     "img = img_as_float(img)\n",
     "\n",
     "#mask:這個MASK是取平均的遮罩\n",
